Change Log
==========


Release 0.5.1.0
	- fixed bug 3125448
	  restrict rights of an user who only has add user permission to not have the 
	  possibility to gain more rights by creating users with higher level of rights
	  
	- resolved feature requests 1985511, 3079669 and 3109997
	  added LDAP support to make connections to AD or other LDAP servers possible to
	  get a single sign on
	  
Release 0.5.0.3
	- fixed bug in resetpassword.php
	
Release 0.5.0.2
	- fixed a typo in deleteAccessRight.php 
	
Release 0.5.0.1
	- fixed a typo
	
Release 0.5.0.0
	- added support for PostgreSQL
	- added support for Oracle 10g/11g
	- divided installer up into 6 pages
	
Release 0.4.1.6
	- fixed a typographical error in checkPasswordPolicy function
	
Release 0.4.1.5
	- fixed issues with svn and svnadmin command under windows
	- make repository compatibility configurable with svnadmin create. Default
	  value is determined by svnadmin help create command. If no suitable value can
	  be found, default is assumed as --pre-1.4-compatible
	- added access rights management for files. From now on access rights can be set
	  on files too. To make the new behaviour working add $CONF['accessControl'] to
	  your config.inc.php. Valid entries are "dirs" or "files". "dirs" is the default.
	- changed installer to reflect the enhancements
	  
Release 0.4.1.3
	- fixed an issue with access file creation under windows
	
Release 0.4.1.2
 	- fixed several bugs in the installer
 	
Release 0.4.1.1
	- fixed a bug which makes it project administrators impossible to manage access
	  rights for projects they are responsible for
	  
Release 0.4.1.0
	- fixed bug 2929680: 
	  added configurable language support for MySQL to installer and changed db connect
	  function accordingly.
	- added security question to allow users to reset their password themselves
	   
Release 0.4.0.3
	- fixed a bug in list project screen
	- added two constants to make password complexity configurable. Passwords must consist